--- a/requirements.txt
+++ b/requirements.txt
@@ -2,3 +2,34 @@ requests==2.32.3
 line-bot-sdk==3.14.2
 flask==3.1.0
 geopy==2.4.1
+aenum==3.1.15
+aiohappyeyeballs==2.4.4
+aiohttp==3.11.10
+aiosignal==1.3.1
+annotated-types==0.7.0
+async-timeout==5.0.1
+attrs==24.2.0
+blinker==1.9.0
+certifi==2024.8.30
+charset-normalizer==3.4.0
+click==8.1.7
+Deprecated==1.2.15
+frozenlist==1.5.0
+future==1.0.0
+geographiclib==2.0
+idna==3.10
+itsdangerous==2.2.0
+Jinja2==3.1.4
+MarkupSafe ==3.0.2
+multidic==6.1.0
+propcache==0.2.1
+pydantic==2.10.3
+pydantic_core==2.27.1
+python-dateutil==2.9.0.post0
+setuptools==59.6.0
+six==1.17.0
+typing_extensions==4.12.2
+urllib3==2.2.3
+Werkzeug==3.1.3
+wrapt==1.17.0
+yarl==1.18.3
